# Cadenza

./: AGENTS.md  Cargo.toml  README.md  test_v0.1.md
crates/cadenza-core/: Cargo.toml
crates/cadenza-core/src/: app.rs  audio_graph.rs  audio_params.rs  diagnostics.rs  ipc.rs  lib.rs  playback_engine.rs  scheduler.rs  transport.rs
crates/cadenza-domain-eval/: Cargo.toml
crates/cadenza-domain-eval/src/: judge.rs  lib.rs
crates/cadenza-domain-eval/tests/: judge_tests.rs
crates/cadenza-domain-score/: Cargo.toml
crates/cadenza-domain-score/src/: lib.rs  midi_export.rs  midi_import.rs  model.rs  musicxml_import.rs
crates/cadenza-domain-score/tests/: midi_import_sanitize_test.rs  midi_roundtrip_test.rs  musicxml_import_test.rs
crates/cadenza-infra-audio-cpal/: Cargo.toml
crates/cadenza-infra-audio-cpal/src/: lib.rs
crates/cadenza-infra-midi-midir/: Cargo.toml
crates/cadenza-infra-midi-midir/src/: lib.rs
crates/cadenza-infra-omr-audiveris/: Cargo.toml
crates/cadenza-infra-omr-audiveris/src/: lib.rs
crates/cadenza-infra-storage-fs/: Cargo.toml
crates/cadenza-infra-storage-fs/src/: lib.rs
crates/cadenza-infra-synth-rustysynth/: Cargo.toml
crates/cadenza-infra-synth-rustysynth/src/: lib.rs
crates/cadenza-infra-synth-simple/: Cargo.toml
crates/cadenza-infra-synth-simple/src/: lib.rs
crates/cadenza-infra-synth-waveguide-piano/: Cargo.toml
crates/cadenza-infra-synth-waveguide-piano/src/: lib.rs
crates/cadenza-ports/: Cargo.toml
crates/cadenza-ports/src/: audio.rs  lib.rs  midi.rs  omr.rs  playback.rs  storage.rs  synth.rs  (+1 more)
docs/: ARCHITECTURE.md  Audiveris.md  CODE_REVIEW.md  Judge_v0.1.md  PortsEventsDTO.md  RELEASE_CHECKLIST.md  ROADMAP.md  Rust_trairs.md  ScoreDomain_v0.1.md  SoundFont.md  Transport.md  UI_spec.md  distribution.md  error_process.md  platform_impl.md  requiements_doc.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
