[package]
name = "cadenza-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
rtrb = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cadenza-ports = { path = "../cadenza-ports" }
cadenza-domain-score = { path = "../cadenza-domain-score" }
cadenza-domain-eval = { path = "../cadenza-domain-eval" }
